# fomo-space-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
scripts/: compare_chunking.py  upload_context_file.py
src/: main.py
src/api/: chat.py  context.py
src/compat/: __init__.py  langchain_anthropic.py
src/config/: settings.py
src/service/: chunking.py  context_store.py  fetch_service.py  file_parser.py  knowledge_base.py  knowledge_file_service.py  llm_service.py
src/type/: enums.py
src/utility/: browser.py  browser_manager.py  content_helper.py  in_memory_redis.py  linkedin_feed_parser.py  linkedin_web_agent.py
tests/: test_browser_llm_js_sanitize.py  test_chat.py  test_chunking.py  test_context.py  test_file_parser.py  test_kb.py  test_knowledge_file.py  test_linkedin_feed_parser.py  test_llm.py
tests/fixtures/: linkedin_feed_dom_cards.html  linkedin_feed_voyager_snippet.html  retrieval_queries.jsonl
