[tool.poetry]
name = "crxon-faq-llm"
version = "1.0.0"
description = "A FastAPI backend of customized knowledge base, RAG-based FAQ"
authors = ["Iris Amamiya"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
fastapi = {extras = ["standard"], version = "^0.128.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.11.0"
pytest = "^9.0.0"
pathlib = "^1.0.1"
numpy = "^2.3.4"
logging = "^0.4.9.6"
scikit-learn = "^1.7.2"
sentence-transformers = "^5.1.2"
langchain = "^1.0.5"
langchain-anthropic = "^1.0.2"
sniffio = "^1.3.1"
bs4 = "^0.0.2"
requests = "^2.32.5"
langchain-huggingface = "^1.2.0"
langchain-core = "^1.2.7"
langchain-community = "^0.4.1"
pymupdf = "^1.26.6"
pymupdf4llm = "^0.2.9"
pymupdf-layout = "^1.26.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
